[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "certbot-dns-aliyun-esa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alibabacloud-esa20240910>=2.38.0",
    "certbot>=5.4.0",
    "zope.interface>=6.0",
    "setuptools>=65.5.0"
]


[project.entry-points."certbot.plugins"]
dns-aliyun-esa = "certbot_dns_aliyun_esa:Authenticator"


[tool.setuptools]
packages = ["certbot_dns_aliyun_esa"]
include-package-data = true